log
Thu 11 May 2023 04:27:16 PM UTC: 
 tests:  0|4
total_score: 0/70
c4afad5
Thu 11 May 2023 04:30:49 PM UTC: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
cc6fed1
Thu 11 May 2023 04:31:01 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createHeap’:
heap.c:38:24: error: ‘nuevoHeap’ is used uninitialized in this function [-Werror=uninitialized]
   38 |   nuevoHeap->heapArray = malloc(3 * sizeof(Heap));
      |   ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
89b2ec2
Thu 11 May 2023 04:31:10 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
1ff85f4
Thu 11 May 2023 04:31:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   21 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cdf753d
Thu 11 May 2023 04:32:49 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:15: error: incompatible types when initializing type ‘void *’ using type ‘heapElem’ {aka ‘struct nodo’}
   21 |   void *top = pq->heapArray[0];
      |               ^~
Compilation failed
85f7b82
